src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assetized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assetized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Box__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Box</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Common__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Common</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <picklist>
            <picklistValues>
                <fullName>AOpen DE 945CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherlock-D510</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherlock-D525</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seneca - D525</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technovare-2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mediawave-ION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>598U - Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20LS7DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26LG30DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26LC7DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32LG30DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32LH20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32LC7DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42LG30DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NU DVD PDP-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CODY DVD209</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sylvania DVD Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerson DVD Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26LH20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42PJ350C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22LD350C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26LD350C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32LD350C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42LD450C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>37LD450C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32LD452C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>37LD452C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42LD452B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26LD352C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22LV255C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Available in Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <label>OS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Comment__c</fullName>
        <label>Product Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuantityValued__c</fullName>
        <label>Quantity Valued (Per Prescriber)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RateCardName__c</fullName>
        <label>Rate Card Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_ID__c</fullName>
        <displayFormat>{0}</displayFormat>
        <externalId>true</externalId>
        <label>Task ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Total_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Type1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Quantity(each)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Weight(kilogram)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time(hours)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volume(cubic inch)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Active_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Assetized__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Box__c</columns>
        <columns>Hidden__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Products</label>
    </listViews>
    <listViews>
        <fullName>All_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Assetized__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <recordTypes>
        <fullName>Membership</fullName>
        <active>true</active>
        <description>Membership products.</description>
        <label>Membership</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sponsorship</fullName>
        <active>true</active>
        <description>Products used for Sponsorship Opportunities.</description>
        <label>Sponsorship</label>
    </recordTypes>
    <recordTypes>
        <fullName>SupplyChain</fullName>
        <active>true</active>
        <description>Products used for the shipping wizard on CaseDetails and AccountDetails pages.</description>
        <label>Supply Chain</label>
    </recordTypes>
    <validationRules>
        <fullName>Asset_count_check</fullName>
        <active>true</active>
        <errorConditionFormula>Number__c &gt;  Total_Count__c</errorConditionFormula>
        <errorMessage>Please verify the quantity field</errorMessage>
    </validationRules>
</CustomObject>